# LensfunWasm

./: .gitignore  .gitmodules  .npmignore  NOTICE.md  README.ja.md  README.md  README.zh-CN.md  THIRD_PARTY_LICENSES.md  UPSTREAM.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  release.yml
native/: CMakeLists.txt
native/include/: glib.h  lensfun_wasm_bridge.h
native/include/glib/: gstdio.h
native/src/: cpuid_stub.cpp  glib_compat.cpp  lensfun_wasm_bridge.cpp
scripts/: build-wasm.sh  sync-upstream.sh  verify-release-tag.mjs
src/: index.ts
tests/: api-shape.test.ts
